--- a/css/combine.css
+++ b/css/combine.css
@@ -5,9 +5,7 @@
 
 html,
 body {
-   margin:0;
-   padding:0;
-   height:100%;
+   height: 100%;
    font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -15,34 +13,23 @@ body {
    min-height:100%;
 }
 
+/* 4 grote container divs header/navbar/main footer */
 .header {
   width: 100%;
   min-height: 50px;
   box-sizing: border-box;
-  border: solid 0px;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.night .header {
-  background-image: url("../imgs/skyline_black_blue_small.png");
-}
-
-.day .header {
-  background-image: url("../imgs/skyline_white_red_small.png");
-}
-
 .navbar {
   min-height: 50px;
-  background-color: red;
   width: 100%;
-  border: solid;
   box-sizing: border-box;
 }
 
 .main {
-  background-color: green;
   max-width: 1400px;
   width: 100%;
   margin-left: auto;
@@ -58,25 +45,22 @@ body {
   bottom:0;
   width:100%;
   min-height: 50px;
-  background-color: yellow;
   box-sizing: border-box;
 }
 
-.fixednav {
-  position: fixed;
-  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
-  top: 0px;
-}
+/* inside header elements */
 
-p {
-  font-size: 20px;
+.navcontainer {
+  max-width: 1400px;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div.container2 {
   display: inline-block;
   margin-left: auto;
   margin-right: auto;
-  border: solid red;
 }
 
 .toggle-btn {
@@ -113,7 +97,6 @@ div.amsterdam {
   margin-right: 20px;
   text-transform: uppercase;
   font-weight: bold;
-  border: solid white;
 }
 
 div.daynight {
@@ -122,8 +105,9 @@ div.daynight {
   margin-left: auto;
   width: 200px;
   margin-top: 5px;
-  border: solid black;
 }
+
+/* inside navbar elements */
 
 ul {
   list-style-type: none;
@@ -142,6 +126,68 @@ li {
 
 li.logo {
   display: none;
-  background: white;
-  transition: all 5s;
+  justify-content: flex-start;
+}
+
+/* inside main elements */
+
+p {
+  font-size: 20px;
+}
+
+/* inside footer*/
+
+
+/* Styling sticky header */
+
+.fixednav .navbar {
+  position: fixed;
+  box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+  top: 0px;
+}
+
+.fixednav li.logo {
+  transition: all 20s ease-in-out;
+  display: inline-flex;
+}
+
+.fixednav div.daynight {
+  text-align: left;
+}
+
+
+/* Styling for day */
+
+body.day {
+  background-color: rgb(251, 242, 241);
+}
+
+.day .header {
+  background-image: url("../imgs/skyline_white_red_small.png");
+}
+
+.day .navbar, .day .footer {
+  background-color: #c84537;
+}
+
+.day .main {
+  background-color: #ffb3b3;
+}
+
+/* Styling for night */
+
+body.night {
+  background: black;
+}
+
+.night .header {
+  background-image: url("../imgs/skyline_black_blue_small.png");
+}
+
+.night .navbar, .night .footer {
+  background-color: #53c4d0;
+}
+
+.night .main {
+  background-color: #ff1493;
 }
