--- a/css/combine.css
+++ b/css/combine.css
@@ -50,13 +50,6 @@ body {
 
 /* inside header elements */
 
-.navcontainer {
-  max-width: 1400px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 div.container2 {
   display: inline-block;
   margin-left: auto;
@@ -113,17 +106,20 @@ div.daynight {
 
 ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
   display: flex;
-  flex-wrap: no-wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: center;
+  height: 100%;
 }
 
 li {
   flex: 1;
   text-align: center;
-  justify-content: center;
-  align-items: center;
+  align-self: center;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 
 li.logo {
@@ -131,9 +127,33 @@ li.logo {
   justify-content: flex-start;
 }
 
+li.house {
+  height: 100%;
+  display: inline-flex;
+  flex: none;
+  justify-content: center;
+}
+
+#house {
+  background-image: url("../imgs/house.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 80px;
+  position: relative;
+}
+
+#home {
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%,-50%);
+  color: white;
+}
+
 /* inside main elements */
 
-p {
+p  {
   font-size: 20px;
 }
 
@@ -151,6 +171,8 @@ p {
 .fixednav li.logo {
   transition: all 20s ease-in-out;
   display: inline-flex;
+  flex: none;
+  padding-right: 15px;
 }
 
 .fixednav div.daynight {
@@ -160,6 +182,10 @@ p {
 .fixednav div#navbar {
   position: fixed;
   top: 0px;
+}
+
+#btn-nav {
+  padding-right: 5px;
 }
 
 /* Styling for day */
