--- a/css/combine.css
+++ b/css/combine.css
@@ -200,6 +200,28 @@ p.navbar  {
 
 p{
   font-size: 16px;
+  padding: 0 30px;
+}
+
+h1 {
+  padding: 20px 0;
+  text-align: center;
+}
+
+div.photocontainer {
+  border: solid white;
+  width: 32%;
+  height: 100px;
+  float: left;
+}
+
+div.photo1 {
+  background-image: url("../imgs/blacklight_makeup");
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 32%;
+  height: 100px;
+  border: solid white;
 }
 
 /* inside footer*/
