--- a/css/combine.css
+++ b/css/combine.css
@@ -111,6 +111,29 @@ div.daynight {
 
 /* inside navbar elements */
 
+.house, .registration, .volunteer, .merchandise, .dropbtn {
+    display: table;
+}
+
+a.dropbtn {
+  height: 100%;
+  display: table;
+}
+
+#home, #information, #registration, #volunteer, #merchandise, #info {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+li.house, li.registration, li.volunteer, li.merchandise, div.dropdown {
+  height: 100%;
+  min-height: 50px;
+}
+
+
 .dropdown-content a:visited {
   color: white;
 }
@@ -119,7 +142,7 @@ a:visited {
   color: black;
 }
 
-ul {
+ul.navlist {
   list-style-type: none;
   display: flex;
   max-width: 1200px;
@@ -128,17 +151,17 @@ ul {
   overflow: hidden;
 }
 
+#navlist {
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 50px;
+}
+
 li {
   flex: 1;
   text-transform: uppercase;
   font-weight: 900;
   min-height: 50px;
-}
-
-#home, #information, #registration, #volunteer, #merchandise {
-  align-self: center;
-  width: 100%;
-  text-align: center;
 }
 
 li a, .dropbtn {
@@ -163,11 +186,7 @@ li.logo {
   z-index: 12;
   display: none;
   position: absolute;
-}
-
-li.dropdown {
-  display: inline-block;
-  padding: 5px 0;
+  width: inherit;
 }
 
 .dropdown-content a{
@@ -178,12 +197,12 @@ li.dropdown {
   display: block;
 }
 
-
-/* inside main elements */
-
 p.navbar  {
   font-size: 20px;
 }
+
+/* inside main elements */
+
 
 p{
   font-size: 16px;
