--- a/css/combine.css
+++ b/css/combine.css
@@ -273,6 +273,23 @@ div.photo3 {
   padding: 20px;
 }
 
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border-bottom: solid black;
+  padding: 5px;
+}
+
+th {
+  background-color: black;
+  color: white;
+}
+
+tr:hover {background-color: #f5f5f5;}
+
 /* inside footer*/
 
 
