--- a/css/combine.css
+++ b/css/combine.css
@@ -379,8 +379,8 @@ body.night {
 }
 
 .night .navbar {
-  background-color: #0310EA;
-  box-shadow: 0 0 5px 5px #0310EA;
+  background-color: #15f4ee;
+  box-shadow: 0 0 5px 5px #15f4ee;
   z-index: 5;
 }
 
