--- a/css/combine.css
+++ b/css/combine.css
@@ -131,7 +131,7 @@ a.dropbtn {
 #registration,
 #volunteer,
 #merchandise,
-#info {
+#info, #btn-nav {
   width: 100%;
   height: 100%;
   text-align: center;
@@ -366,9 +366,10 @@ p.footer-txt {
 
 .fixednav li.logo {
   transition: all 20s ease-in-out;
-  display: inline-flex;
+  display: table;
   flex: none;
   padding-right: 15px;
+  height: 100%;
 }
 
 .fixednav div.daynight {
@@ -383,6 +384,8 @@ p.footer-txt {
 #btn-nav {
   padding-right: 5px;
 }
+
+
 
 /* Styling for day */
 
