--- a/css/combine.css
+++ b/css/combine.css
@@ -27,7 +27,6 @@ body {
   min-height: 50px;
   width: 100%;
   box-sizing: border-box;
-  z-index: 2;
 }
 
 .main {
@@ -113,17 +112,22 @@ div.daynight {
 
 /* inside navbar elements */
 
-.house,
-.registration,
-.volunteer,
-.merchandise,
-.dropbtn {
-  display: table;
+.house > div,
+.registration > div,
+.volunteer > div,
+.info  > div,
+.merchandise > div {
+  display: flex;
+align-items: center;
+justify-content: center;
+
 }
+/* .dropbtn {
+  display: table;
+} */
 
 a.dropbtn {
   height: 100%;
-  display: table;
 }
 
 #home,
@@ -131,15 +135,15 @@ a.dropbtn {
 #registration,
 #volunteer,
 #merchandise,
-#info, #btn-nav {
+#info {
   width: 100%;
   height: 100%;
   text-align: center;
-  display: table-cell;
   vertical-align: middle;
 }
 
 li.house,
+li.info,
 li.registration,
 li.volunteer,
 li.merchandise,
@@ -149,6 +153,7 @@ div.dropdown {
 }
 
 a.house,
+a.info,
 a.registration,
 a.volunteer,
 a.merchandise {
