--- a/css/combine.css
+++ b/css/combine.css
@@ -190,6 +190,13 @@ li {
   min-height: 50px;
 }
 
+#packing li {
+  text-transform: none;
+  text-decoration: none;
+  font-weight: 10;
+  min-height: 0px;
+}
+
 #MenuList {
   text-transform: none;
   font-weight: 10;
