--- a/css/combine.css
+++ b/css/combine.css
@@ -196,6 +196,9 @@ li {
   font-weight: 10;
   min-height: 0px;
   margin-left: 45px;
+}
+
+.night #packing li {
   text-shadow: 0 0 4px #15f4ee;
 }
 
