link email toegevoegd

--- a/css/combine.css
+++ b/css/combine.css
@@ -190,28 +190,6 @@ li {
   min-height: 50px;
 }
 
-#packing li {
-  text-transform: none;
-  text-decoration: none;
-  font-weight: 10;
-  min-height: 0px;
-  margin-left: 45px;
-}
-
-.night #packing li {
-  text-shadow: 0 0 4px #15f4ee;
-}
-
-#MenuList {
-  text-transform: none;
-  font-weight: 10;
-  min-height: 0px;
-}
-
-#MenuListUL {
-list-style-type: none;
-}
-
 li a,
 .dropbtn {
   display: inline-block;
@@ -347,6 +325,32 @@ th {
 
 .night tr:hover {
   background-color: #75787b;
+}
+
+#packing li {
+  text-transform: none;
+  text-decoration: none;
+  font-weight: 10;
+  min-height: 0px;
+  margin-left: 45px;
+}
+
+.night #packing li {
+  text-shadow: 0 0 4px #15f4ee;
+}
+
+#MenuList {
+  text-transform: none;
+  font-weight: 10;
+  min-height: 0px;
+}
+
+#MenuListUL {
+list-style-type: none;
+}
+
+#maillink {
+  color: inherit;
 }
 
 /* inside footer*/
